# survey

ark/: Cargo.toml
ark/src/: main.rs
mir_r1cs/: Cargo.toml  foo.txt  test.zkif
mir_r1cs/src/: main.rs
republic_zksnark_rs/: Cargo.toml
republic_zksnark_rs/src/: main.rs
