[package]
name = "mir_r1cs"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r1cs = "0.4.7"
zkinterface = { version = "1.1.3" }
r1cs-zkinterface = {git="https://github.com/ZeroProphet/r1cs-zkinterface.git", branch="bugfixed/fixed_import"}